[gd_scene load_steps=38 format=2]

[ext_resource path="res://assets/arrow.png" type="Texture" id=1]
[ext_resource path="res://code/fps.gd" type="Script" id=2]
[ext_resource path="res://assets/AlegreyaSans-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://code/versionlab.gd" type="Script" id=6]
[ext_resource path="res://code/load_images.gd" type="Script" id=7]
[ext_resource path="res://code/comments.gd" type="Script" id=8]
[ext_resource path="res://assets/default image.png" type="Texture" id=9]
[ext_resource path="res://code/leftlabel.gd" type="Script" id=10]
[ext_resource path="res://themes/lighttheme.tres" type="Theme" id=11]
[ext_resource path="res://code/rownames.gd" type="Script" id=13]
[ext_resource path="res://code/zoom_shader.gd" type="Script" id=14]
[ext_resource path="res://code/statstext.gd" type="Script" id=15]
[ext_resource path="res://assets/reload.png" type="Texture" id=17]
[ext_resource path="res://assets/eye.png" type="Texture" id=18]
[ext_resource path="res://code/version.gd" type="Script" id=24]
[ext_resource path="res://code/updatepanel.gd" type="Script" id=25]
[ext_resource path="res://code/page.gd" type="Script" id=26]

[sub_resource type="Shader" id=28]
code = "shader_type canvas_item;

uniform sampler2D tex;

void fragment(){COLOR=texture(tex,UV);}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 28 )
shader_param/tex = ExtResource( 9 )

[sub_resource type="Shader" id=11]
code = "shader_type canvas_item;

uniform sampler2D tex;
uniform vec2 pos;

void fragment(){
	vec2 uv=((1.-UV)*2.-1.)*.1;
	COLOR.rgb=texture(tex,(pos-uv)).rgb;
	if(length(UV-vec2(.5))>.5){COLOR.a=0.;}
}"

[sub_resource type="ViewportTexture" id=13]
viewport_path = NodePath("View/CanvasLayer/zoom_shader/Viewport")

[sub_resource type="ShaderMaterial" id=12]
resource_local_to_scene = true
shader = SubResource( 11 )
shader_param/pos = Vector2( 0.5, 0.5 )
shader_param/tex = SubResource( 13 )

[sub_resource type="DynamicFont" id=7]
size = 64
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.498039, 0.498039, 0.498039, 1 )
shadow_size = 2

[sub_resource type="DynamicFont" id=25]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=26]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="DynamicFont" id=27]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=24]

[node name="Main" type="Node2D"]

[node name="loadsettings" type="Node2D" parent="."]

[node name="ImageNav" type="Node2D" parent="."]

[node name="View" type="Camera2D" parent="."]
position = Vector2( 370, 256 )
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="View"]

[node name="PageCenter" type="Control" parent="View/CanvasLayer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -256.0
margin_right = 741.0
margin_bottom = 256.0
theme = ExtResource( 11 )
script = ExtResource( 26 )

[node name="LeftPanel" type="Panel" parent="View/CanvasLayer/PageCenter"]
margin_top = 27.0
margin_right = 256.0
margin_bottom = 283.0
grow_horizontal = 2
grow_vertical = 2

[node name="rownames" type="Label" parent="View/CanvasLayer/PageCenter/LeftPanel"]
margin_right = 128.0
margin_bottom = 512.0
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 13 )

[node name="filename" type="Label" parent="View/CanvasLayer/PageCenter/LeftPanel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -192.0
margin_right = 192.0
margin_bottom = 512.0
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 10 )

[node name="StatsPanel" type="Panel" parent="View/CanvasLayer/PageCenter"]
margin_top = 256.0
margin_right = 256.0
margin_bottom = 512.0

[node name="version" type="Label" parent="View/CanvasLayer/PageCenter/StatsPanel"]
margin_right = 512.0
margin_bottom = 64.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Version: 
Updated:"
script = ExtResource( 6 )

[node name="fps" type="Label" parent="View/CanvasLayer/PageCenter/StatsPanel"]
margin_top = 42.0
margin_right = 512.0
margin_bottom = 106.0
rect_scale = Vector2( 0.5, 0.5 )
text = "FPS"
script = ExtResource( 2 )

[node name="statstext" type="Label" parent="View/CanvasLayer/PageCenter/StatsPanel"]
margin_top = 60.0
margin_right = 512.0
margin_bottom = 124.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Statistics:"
script = ExtResource( 15 )

[node name="comments" type="Label" parent="View/CanvasLayer/PageCenter/StatsPanel"]
margin_top = 165.0
margin_right = 512.0
margin_bottom = 229.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Comments:"
script = ExtResource( 8 )

[node name="CenterPanel" type="ColorRect" parent="View/CanvasLayer"]
material = SubResource( 6 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -485.0
margin_top = -229.0
margin_bottom = 256.0
color = Color( 0.498039, 0.498039, 0.501961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="zoom_shader" type="ColorRect" parent="View/CanvasLayer/CenterPanel"]
material = SubResource( 12 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -485.0
margin_top = -242.5
margin_right = -229.0
margin_bottom = 13.5
color = Color( 1, 0.882353, 0.109804, 1 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="View/CanvasLayer/CenterPanel/zoom_shader"]
size = Vector2( 2048, 2048 )
disable_3d = true
usage = 0
render_target_v_flip = true

[node name="image" type="ColorRect" parent="View/CanvasLayer/CenterPanel/zoom_shader/Viewport"]
material = SubResource( 6 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -2048.0
margin_top = -1024.0
margin_bottom = 1024.0
color = Color( 0.498039, 0.498039, 0.501961, 1 )

[node name="missinglabel" type="Label" parent="View/CanvasLayer/CenterPanel"]
margin_right = 970.0
margin_bottom = 970.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 7 )
text = "No image data"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boxes" type="Node2D" parent="View/CanvasLayer/CenterPanel"]
position = Vector2( -256, -27 )

[node name="Center" type="Control" parent="View/CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -370.5
margin_top = -256.0
margin_right = 370.5
margin_bottom = 256.0
theme = ExtResource( 11 )
script = ExtResource( 26 )
__meta__ = {
"_edit_lock_": true
}

[node name="ImageLoad" type="FileDialog" parent="View/CanvasLayer/Center"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -306.5
margin_top = -208.0
margin_right = 919.5
margin_bottom = 624.0
rect_scale = Vector2( 0.5, 0.5 )
custom_icons/toggle_hidden = ExtResource( 18 )
custom_icons/parent_folder = ExtResource( 1 )
custom_icons/reload = ExtResource( 17 )
popup_exclusive = true
window_title = ""
dialog_hide_on_ok = true
dialog_autowrap = true
mode_overrides_title = false
mode = 2
access = 2
filters = PoolStringArray( "Folders" )
current_dir = "/Users/Ari/Documents/scripts/xprize/annotator"
current_path = "/Users/Ari/Documents/scripts/xprize/annotator/"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft" type="Control" parent="View/CanvasLayer"]
margin_right = 741.0
margin_bottom = 24.0
theme = ExtResource( 11 )
script = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopPanel" type="Panel" parent="View/CanvasLayer/TopLeft"]
margin_right = 740.0
margin_bottom = 27.0
size_flags_horizontal = 2

[node name="load" type="Button" parent="View/CanvasLayer/TopLeft/TopPanel"]
margin_right = 320.0
margin_bottom = 54.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Load image directory"

[node name="setdir" type="Button" parent="View/CanvasLayer/TopLeft/TopPanel"]
margin_left = 160.0
margin_right = 480.0
margin_bottom = 54.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Load data directory"

[node name="settings" type="Button" parent="View/CanvasLayer/TopLeft/TopPanel"]
margin_left = 320.0
margin_right = 640.0
margin_bottom = 54.0
rect_scale = Vector2( 0.5, 0.5 )
input_pass_on_modal_close_click = false
text = "Settings"

[node name="TopRight" type="Control" parent="View/CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -65.0
margin_right = -1.0
margin_bottom = 24.0
theme = ExtResource( 11 )
script = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pageleft" type="Button" parent="View/CanvasLayer/TopRight"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -143.0
margin_right = 1.0
margin_bottom = 54.0
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
text = "Page left"

[node name="pageright" type="Button" parent="View/CanvasLayer/TopRight"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -71.0
margin_right = 73.0
margin_bottom = 54.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Page right"

[node name="cycleup" type="TextureButton" parent="View/CanvasLayer/TopRight"]
margin_left = -97.0
margin_right = -81.0
margin_bottom = 16.0
texture_normal = ExtResource( 1 )

[node name="cycledown" type="TextureButton" parent="View/CanvasLayer/TopRight"]
margin_left = -97.0
margin_top = 11.0
margin_right = -81.0
margin_bottom = 27.0
texture_normal = ExtResource( 1 )
flip_v = true

[node name="TextEdit" type="LineEdit" parent="View/CanvasLayer/TopRight"]
margin_left = -155.0
margin_right = -14.0
margin_bottom = 67.5
rect_scale = Vector2( 0.4, 0.4 )
text = "0"

[node name="PageBottom" type="Control" parent="View/CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -24.0
margin_right = 741.0
theme = ExtResource( 11 )
script = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="updatepanel" type="Panel" parent="View/CanvasLayer"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -90.0
margin_right = 246.0
margin_bottom = -10.0
custom_styles/panel = SubResource( 14 )
script = ExtResource( 25 )

[node name="Label" type="Label" parent="View/CanvasLayer/updatepanel"]
margin_top = -1.0
margin_right = 545.0
margin_bottom = 130.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 25 )
text = "You are currently using version <current>, The most recent version is <version> Consider updating:"
autowrap = true

[node name="link" type="Button" parent="View/CanvasLayer/updatepanel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -18.0
margin_right = 587.0
margin_bottom = 22.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 26 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
text = "https://arigrele.github.io/Projects/update"
align = 0

[node name="close" type="Button" parent="View/CanvasLayer/updatepanel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -19.0
margin_top = -1.0
margin_right = 6.0
margin_bottom = 38.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 27 )
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 22 )
custom_styles/disabled = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
text = "X"

[node name="version" type="Node2D" parent="."]
script = ExtResource( 24 )

[node name="HTTPRequest" type="HTTPRequest" parent="version"]

[connection signal="dir_selected" from="View/CanvasLayer/Center/ImageLoad" to="loadsettings" method="_on_ImageLoad_dir_selected"]
[connection signal="dir_selected" from="View/CanvasLayer/Center/ImageLoad" to="ImageNav" method="_on_ImageLoad_dir_selected"]
[connection signal="dir_selected" from="View/CanvasLayer/Center/ImageLoad" to="View/CanvasLayer/PageCenter/LeftPanel/filename" method="_on_ImageLoad_dir_selected"]
[connection signal="button_down" from="View/CanvasLayer/TopLeft/TopPanel/load" to="View/CanvasLayer/Center/ImageLoad" method="_on_load_button_down"]
[connection signal="pressed" from="View/CanvasLayer/TopLeft/TopPanel/load" to="View/CanvasLayer/Center/ImageLoad" method="_on_load_pressed"]
[connection signal="pressed" from="View/CanvasLayer/TopRight/pageleft" to="ImageNav" method="_on_pageleft_pressed"]
[connection signal="pressed" from="View/CanvasLayer/TopRight/pageleft" to="View/CanvasLayer/PageCenter/LeftPanel/filename" method="_on_pageleft_pressed"]
[connection signal="pressed" from="View/CanvasLayer/TopRight/pageright" to="ImageNav" method="_on_pageright_pressed"]
[connection signal="pressed" from="View/CanvasLayer/TopRight/pageright" to="View/CanvasLayer/PageCenter/LeftPanel/filename" method="_on_pageright_pressed"]
[connection signal="pressed" from="View/CanvasLayer/TopRight/cycleup" to="View/CanvasLayer/CenterPanel/Boxes" method="_on_cycleup_pressed"]
[connection signal="pressed" from="View/CanvasLayer/TopRight/cycledown" to="View/CanvasLayer/CenterPanel/Boxes" method="_on_cycledown_pressed"]
[connection signal="text_entered" from="View/CanvasLayer/TopRight/TextEdit" to="ImageNav" method="_on_TextEdit_text_entered"]
[connection signal="pressed" from="View/CanvasLayer/updatepanel/link" to="View/CanvasLayer/updatepanel" method="_on_link_pressed"]
[connection signal="pressed" from="View/CanvasLayer/updatepanel/close" to="View/CanvasLayer/updatepanel" method="_on_close_pressed"]
